--- a/README
+++ b/README
@@ -1,64 +1,1 @@
-I havent had chance to write this quite yet.
-
-This repo is a meta-custom layer that you need to put in your cloned Poky directory
-
-Go into poky and clone this repo
-
-Make your build environment  . ./OE etc etc
-
-Take the local.conf etc from the install files in this repo.
-
-
-Do a bitbake core-image-minimal  and it will download and patch everything for you.
-
-The SDcard image will appear as a wic file, and make a card with "sudo dd ......."
-
-Put it in the beagle and boot up.   The card will say "loading from mmc2".  To get rid of that edit the u-boot customisations and get rid of the "sd-card" inverted.
-
-Hopefully I have saved you a day of work !
-
-
-
-
-
-*This repo contains the meta-custom layer and build/conf files needed to patch the Styhead Yocto release of Poky 
-
-Please see the corresponding sections below for details.
-
-Dependencies
-============
-
-  URI: <first dependency>
-  branch: <branch name>
-
-  URI: <second dependency>
-  branch: <branch name>
-
-  .
-  .
-  .
-
-Patches
-=======
-
-Please submit any patches against the meta-custom layer to the xxxx mailing list (xxxx@zzzz.org)
-and cc: the maintainer:
-
-Maintainer: XXX YYYYYY <xxx.yyyyyy@zzzzz.com>
-
-Table of Contents
-=================
-
-  I. Adding the meta-custom layer to your build
- II. Misc
-
-
-I. Adding the meta-custom layer to your build
-=================================================
-
-Run 'bitbake-layers add-layer meta-custom'
-
-II. Misc
-========
-
---- replace with specific information about the meta-custom layer ---
+This repo has some basic changes to the standard TI-meta layer that will improve matters.
